--- a/style.css
+++ b/style.css
@@ -161,7 +161,7 @@ p {
 }
 
 .card-button {
-  border: none;
+  border-radius: 100%;
   height: 3.5rem;
   width: 3.5rem;
   outline: none;
@@ -227,9 +227,16 @@ p {
   position: absolute;
 }
 
-
 .hidden {
   display: none
+}
+
+.completed-card {
+  background-color: #626366b0;
+}
+
+.completed-card-buttons {
+  border: 3px solid #00A79D;
 }
 
 @media screen and (max-width: 1600px) {
