--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ h1 {
   text-align: center;
 }
 
-.filter-quality {
+.filter-importance {
   border: solid 3px #6D6E71;
   cursor: pointer;
   font-size: 2.5rem;
