--- a/style.css
+++ b/style.css
@@ -251,20 +251,81 @@ p {
   border: 3px solid #00A79D;
 }
 
-@media screen and (max-width: 1600px) {
+
+
+@media screen and (max-width: 1400px) {
+  .filter-importance {
+    width:7.8rem;
+  }
+
+  .bottom-btn {
+    width: 38%;
+  }
+
+  .more-task {
+    margin-left: 5rem;
+  }
+}
+
+@media screen and (max-width: 1350px ){
+  .filter-importance {
+    width: 7rem;
+    margin: 10px 0.75rem;;
+  }
+
+  .completed-btn {
+    position: absolute;
+    right: 3.5rem;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  h6 {
+
+    position: relative;
+    right: 40px;
+    font-size: 1.1rem;
+  }
+
+  .cards{
+    width: 93%;
+  }
+
+  .filter-btns {
+    position: relative;
+    left: 0.5rem;
+  }
+
+  .completed-btn {
+    position: absolute;
+    right: -20px;
+    font-size: 1.1rem;
+  }
+
+  .bottom-btn {
+    font-size: 1.1rem;
+  }
+
+  #delete-btn {
+    position: absolute;
+    right: 1rem;
+  }
+
+  #search-field{
+    margin: 3rem 0 3rem 2rem;
+  }
 
   #save-btn {
-    width: 51.5%;
+    margin-left: 1rem;
   }
+  
+  .more-tasks {
+    margin-left: 5rem;
+  }
+    
 }
 
-@media screen and (max-width: 1100px) {
-  h1 {
-    font-size: 7.5rem;
-  }
-}
-
-@media screen and (max-width: 750px) {
+/*@media screen and (max-width: 750px) {
   h1 {
     font-size: 7rem;
   }
@@ -287,9 +348,9 @@ p {
     height: 3rem;
     width: 3rem;
   }
-}
+}*/
 
-@media screen and (max-width: 650px) {
+/*@media screen and (max-width: 650px) {
   h1 {
     font-size: 6rem;
     padding: 2.4rem;
@@ -312,16 +373,16 @@ p {
   .body {
     width: 82%;
   }
-}
+}*/
 
-@media screen and (max-width: 500px) {
+/*@media screen and (max-width: 500px) {
   h1 {
     font-size: 5rem;
     padding: 1.8rem;
   }
 }
-
-@media screen and (max-width: 400px) {
+*/
+/*@media screen and (max-width: 400px) {
   h1 {
     font-size: 4rem;
     padding: 1.6rem;
@@ -334,4 +395,4 @@ p {
   p {
     font-size: 2.4rem;
   }
-}
+}*/
