--- a/style.css
+++ b/style.css
@@ -251,9 +251,37 @@ p {
   border: 3px solid #00A79D;
 }
 
+@media screen and (min-width: 1600px) {
+  .cards{
+    width: 80%;
+    margin: 0 auto;
+  }
 
+  .completed-btn {
+    right: 7.3rem;
+  }
 
-@media screen and (max-width: 1400px) {
+  #delete-btn {
+    right: 7.3rem;
+  }
+
+  #search-field {
+    width: 79%;
+    margin: 3rem 0 3rem 7.1rem;
+  }
+
+  .input-boxes {
+    width: 47.5%;
+    margin-right: 1.5rem;
+  }
+
+  #save-btn {
+    width: 48.5%;
+    margin-right: 1.5rem;
+  }
+}
+
+@media screen and (max-width: 1450px) {
   .filter-importance {
     width:7.8rem;
   }
@@ -267,28 +295,58 @@ p {
   }
 }
 
-@media screen and (max-width: 1350px ){
+@media screen and (max-width: 1300px ){
   .filter-importance {
-    width: 7rem;
+    width: 11rem;
     margin: 10px 0.75rem;;
   }
 
   .completed-btn {
     position: absolute;
-    right: 3.5rem;
+    right: .5rem;
+  }
+
+  #delete-btn {
+    right: .5rem;
+  }
+
+  .cards {
+    width: 95%;
+  }
+}
+
+@media screen and (max-width: 1200px ){
+  h6 {
+    font-size: 1.2rem;
+  }
+
+  .completed-btn {
+    font-size: .9rem;
+    right: 2rem;
+  }
+
+  .cards {
+    width: 95%;
+  }
+}
+
+@media screen and (max-width: 1030px) {
+  h6 {
+    font-size: 1rem;
+  }
+
+  .completed-btn {
+    font-size: .8rem;
+    padding: .25rem .5rem;
+
   }
 }
 
 @media screen and (max-width: 900px) {
   h6 {
-
     position: relative;
     right: 40px;
     font-size: 1.1rem;
-  }
-
-  .cards{
-    width: 93%;
   }
 
   .filter-btns {
@@ -322,77 +380,66 @@ p {
   .more-tasks {
     margin-left: 5rem;
   }
-    
 }
 
-/*@media screen and (max-width: 750px) {
-  h1 {
-    font-size: 7rem;
+@media screen and (max-width: 850px){
+ h6 {
+  font-size: 0.95rem;
+ }
+
+ .completed-btn {
+  font-size: 0.95rem;
+ }
+
+ #delete-btn,
+ #upvote-btn,
+ #downvote-btn {
+  height: 2rem;
+  width: 2rem;
+ }
+
+ .input-boxes {
+  width: 75%;
+ }
+
+ #save-btn {
+  width: 76.5%;
+ }
+  
+ #search-field {
+  width: 122%;
+  margin: 2rem 0 3rem -3rem;
+ } 
+
+}
+
+@media screen and (max-width: 733px) {
+  .cards {
+   margin-left: 0;
+   width: 110%;
   }
 
-  h3 {
-    font-size: 4.5rem;
+  .filter-importance {
+    width: 6rem;
   }
 
-  h6 {
-    font-size: 1.75rem;
+  .completed-btn {
+    right: -2rem;
   }
 
-  p {
-    font-size: 2.5rem;
-  }
- 
   #delete-btn,
-  #downvote-btn,
-  #upvote-btn {
-    height: 3rem;
-    width: 3rem;
-  }
-}*/
+  #upvote-btn,
+  #downvote-btn {
+    height: 1.9rem;
+    width: 1.9rem;
+ }
 
-/*@media screen and (max-width: 650px) {
-  h1 {
-    font-size: 6rem;
-    padding: 2.4rem;
-  }
-
-  .input-boxes {
-    width: 80%;
-  }
-
-  .input-body {
-    height: 15rem;
-    text-align: left;
-  }
-
-  #save-btn {
-    height: 6rem;
-    width: 82%;
-  }
-
-  .body {
-    width: 82%;
-  }
-}*/
-
-/*@media screen and (max-width: 500px) {
-  h1 {
-    font-size: 5rem;
-    padding: 1.8rem;
-  }
+ #delete-btn {
+  right: -2rem;
+ }
 }
-*/
-/*@media screen and (max-width: 400px) {
-  h1 {
-    font-size: 4rem;
-    padding: 1.6rem;
-  }
 
-  h3 {
-    font-size: 3.6rem;
-  }
 
-  p {
-    font-size: 2.4rem;
-  }
-}*/
+
+
+
